fix bugs, add some features